<resources>
    <string name="app_name">SISAL</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Constraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Iniciar</string>
    <string name="error_invalid_email">Este usuario es invalido</string>
    <string name="error_invalid_password">Esta contraseña es muy corta</string>
    <string name="error_incorrect_password">C</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Permisos necesarios."
    </string>
    <string name="logInIndications">Ingrese su usuario y contraseña:</string>
    <string name="logInError">Verifique sus datos de inicio o vuelva a intentar mas tarde:</string>
    <string name="title_activity_start_medic">Inicio</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Cerrar Sesión</string>
    <string name="action_synch">Actualizar información</string>
    <string name="title_activity_patient_start">Inicio</string>
    <string name="title_activity_my_doctors">Mis Doctores</string>
    <string name="title_activity_my_dates">Mis Citas</string>
    <string name="title_activity_my_medicines">Mis medicinas</string>
    <string name="title_activity_settings">Configuración</string>
    <string name="title_activity_doctor_dates">Proximas Citas</string>
    <string name="title_activity_settings_doctor">Configuración</string>

    <string name="google_android_map_api_key">AIzaSyDOvit7MUMtkh4VysM1CJ5n0xym18xXe4U</string>
</resources>
